parse Robots.txt and save it in db